
	* Improved logging interface: log levels are now integers (for
	cross-library compatibility and level setting also applies to
	existing loggers.

2008-05-09  Andy Buckley  <andy@insectnation.org>

	* Improvements to robustness of ROOT checks.

	* Added --version flag on config scripts and rivetgun.

2008-05-06  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* New UnstableFinalState projection which selects all hadrons,
	leptons and real photons including unstable particles.

	* In the DELPHI_1996_S3430090 analysis the multiplicities for
	pi+/pi- and p0 are filled, using the UnstableFinalState projection.

2008-05-06  Andy Buckley  <andy@insectnation.org>

	* FastJets projection now protects against the case where no
	particles exist in the final state (where FastJet throws an
	exception).

	* AIDA file writing is now separated from the
	AnalysisHandler::finalize method... API users can choose what to
	do with the histo objects, be that writing out or further
	processing.

2008-04-29  Andy Buckley  <andy@insectnation.org>

	* Increased default tolerances in floating point comparisons as
	they were overly stringent and valid f.p. precision errors were
	being treated as significant.

	* Implemented remainder of Acosta UE analysis.

	* Added proper getEtSum() to Jet.

	* Added Et2() member and function to FourMomentum.

	* Added aida2flat conversion script.

	* Fixed ambiguity in TrackJet algorithm as to how the iteration
	continues when tracks are merged into jets in the inner loop.

2008-04-28  Andy Buckley  <andy@insectnation.org>

	* Merged in major "ProjectionHandler" branch. Projections are now
	all stored centrally in the singleton ProjectionHandler container,
	rather than as member pointers in projections and analyses. This
	also affects the applyProjection mechanism, which is now available
	as a templated method on Analysis and Projection. Still a few
	wrinkles need to be worked out.

	* The branch changes required a comprehensive review of all