@@ -13,6 +13,7 @@ libRivetAnalysisStd_la_SOURCES = StdAnalyses.cc \
     CDF_2008_S7541902.cc \
     D0_2001_S4674421.cc \
     D0_2004_S5992206.cc \
+    DELPHI_1995_S3137023.cc \
     DELPHI_1996_S3430090.cc \
     H1_1995_S3167097.cc \
     ZEUS_2001_S4815815.cc
