@@ -8,6 +8,7 @@
 
 // LEP
 #include "Rivet/Analyses/ALEPH_1991_S2435284.hh"
+#include "Rivet/Analyses/DELPHI_1995_S3137023.hh"
 #include "Rivet/Analyses/DELPHI_1996_S3430090.hh"
 //#include "Rivet/Analyses/OPAL_2004_S6132243.hh"
 
@@ -41,6 +42,7 @@ extern "C" {
 
     // LEP
     fns["ALEPH_1991_S2435284"] = Rivet::ALEPH_1991_S2435284::create;
+    fns["DELPHI_1995_S3137023"] = Rivet::DELPHI_1995_S3137023::create;
     fns["DELPHI_1996_S3430090"] = Rivet::DELPHI_1996_S3430090::create;
     //fns["OPAL_2004_S6132243"] = Rivet::OPAL_2004_S6132243::create;
 
