@@ -12,6 +12,11 @@
 
 2008-05-06  Hendrik Hoeth <hendrik.hoeth@cern.ch>
 
+	* New analysis DELPHI_1995_S3137023. This analysis contains
+	the xp spectra of Xi+- and Sigma(1385)+-.
+
+2008-05-06  Hendrik Hoeth <hendrik.hoeth@cern.ch>
+
 	* New UnstableFinalState projection which selects all hadrons,
 	leptons and real photons including unstable particles.
 
